# warpx

./: .azure-pipelines.yml  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.rst  CTestConfig.cmake  GNUmakefile  PR_NOTES.md  QUARTZ_BOUNDARY_SUMMARY.md  README.md  WarpXConfig.cmake  config.json  context7.json  dependencies.json  requirements.txt  setup.py  warpx_used_inputs
.claude/commands/: new-paper-highlight.md
.claude/skills/: new-paper-highlight.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_report.md  feature_request.md  installation-issue.md
.github/workflows/: check_changes.yml  check_diff.yml  clang_sanitizers.yml  clang_tidy.yml  cleanup-cache-postpr.yml  cleanup-cache.yml  codeql.yml  cuda.yml  deploy-simulation.yaml  hip.yml  insitu.yml  intel.yml  jupyter.yml  macos-push.yml  macos-shared.yml  macos-wrun.yml  macos.yml  monthly_release.yml  petsc.yml  post-pr.yml  skip_checks.yml  source.yml  ubuntu.yml  weekly_update.yml  windows.yml
.gitlab/: ci.yaml
Docs/: Doxyfile  README.md  conda.yml  requirements.txt
Docs/eb_fill_review/: DIELECTRIC_EB_CLASS_SCOPE.md  DIELECTRIC_WALL_CAPABILITIES.md  PR_DRAFT.md  PR_EVIDENCE.md
Docs/source/: acknowledge_us.rst  conf.py  highlights.rst  index.rst  refs.bib
Examples/: CMakeLists.txt  analysis_default_regression.py  analysis_default_restart.py
Examples/Physics_applications/: ohm_law_diagnostics_example.py
Examples/Tests/: CMakeLists.txt
Examples/Tests/spectral_precision/: CMakeLists.txt  analysis_spectral_precision.py  fft_roundtrip.cpp  inputs_base_3d_spectral_precision.py  inputs_base_rz_spectral_precision.py  inputs_test_2d_spectral_precision.py  inputs_test_3d_spectral_precision.py  inputs_test_rz_hankel_precision.py  inputs_test_rz_psatd_eigenmode.py  inputs_test_rz_spectral_precision.py
Python/: setup.py
Python/pywarpx/: Bucket.py  HybridPICModel.py  Particles.py  ProjectionDivCleaner.py  WarpX.py  __init__.py  _libwarpx.py  callbacks.py  fields.py  particle_containers.py  picmi.py
Regression/: requirements.txt
Regression/Checksum/: checksum.py
Regression/PostProcessingUtils/: post_processing_utils.py
Source/: DoxyGraph.H  Fields.H  Make.WarpX  WarpX.H  WarpX.cpp  main.cpp
Source/AcceleratorLattice/: AcceleratorLattice.H  AcceleratorLattice.cpp  LatticeElementFinder.H  LatticeElementFinder.cpp
Source/BoundaryConditions/: CMakeLists.txt  FieldBoundaries.H  FieldBoundaries.cpp  Make.package  PEC_Insulator.H  PEC_Insulator.cpp  PML.H  PML.cpp  PML_RZ.H  PML_RZ.cpp  Quartz.H  Quartz.cpp  WarpXEvolvePML.cpp  WarpXFieldBoundaries.cpp  WarpX_PEC.H  WarpX_PEC.cpp
Source/Diagnostics/: BTDiagnostics.H  BTDiagnostics.cpp  BoundaryScrapingDiagnostics.H  BoundaryScrapingDiagnostics.cpp  Diagnostics.H  Diagnostics.cpp  FullDiagnostics.H  FullDiagnostics.cpp  MultiDiagnostics.H  MultiDiagnostics.cpp  ParticleIO.cpp  WarpXIO.cpp  WarpXOpenPMD.H  WarpXOpenPMD.cpp
Source/EmbeddedBoundary/: CMakeLists.txt  Covered.H  Covered.cpp  EmbeddedBoundary.H  EmbeddedBoundary.cpp  EmbeddedBoundaryInit.H  EmbeddedBoundaryInit.cpp  Make.package  ParticleBoundaryProcess.H  ParticleScraper.H  WarpXFaceExtensions.cpp  WarpXFaceInfoBox.H  WarpXInitEB.cpp
Source/Evolve/: WarpXComputeDt.cpp  WarpXDtType.H  WarpXEvolve.cpp
Source/FieldSolver/: WarpXPushFieldsEM.cpp  WarpXPushFieldsHybridPIC.cpp  WarpXSolveFieldsES.cpp  WarpX_FDTD.H  WarpX_QED_Field_Pushers.cpp  WarpX_QED_K.H
Source/Filter/: BilinearFilter.H  BilinearFilter.cpp  Filter.H  Filter.cpp  NCIGodfreyFilter.H  NCIGodfreyFilter.cpp
Source/Fluids/: CMakeLists.txt  Make.package  MultiFluidContainer.H  MultiFluidContainer.cpp  MusclHancockUtils.H  QdsmcParticleContainer.H  QdsmcParticleContainer.cpp  QdsmcParticleContainer_fwd.H  Qdsmc_K.H  WarpXFluidContainer.H  WarpXFluidContainer.cpp
Source/Initialization/: BackwardCompatibility.H  BackwardCompatibility.cpp  CMakeLists.txt  ExternalField.H  ExternalField.cpp  GetTemperature.H  GetTemperature.cpp  GetVelocity.H  GetVelocity.cpp  InjectorDensity.H  InjectorDensity.cpp  InjectorFlux.H  InjectorMomentum.H  InjectorMomentum.cpp  Make.package  PlasmaInjector.H  PlasmaInjector.cpp  TemperatureProperties.H  TemperatureProperties.cpp  VelocityProperties.H  VelocityProperties.cpp  WarpXAMReXInit.cpp  WarpXInit.H  WarpXInit.cpp  WarpXInitData.cpp
Source/LoadBalance/: LoadBalance.H  LoadBalance.cpp
Source/LoadBalancing/: CMakeLists.txt  HeuristicCostsTracker.H  HeuristicCostsTracker.cpp  LoadBalancer.H  LoadBalancer.cpp  LoadBalancer_fwd.H  Make.package  ScopedTimeTracker.H  ScopedTimeTracker.cpp
Source/NonlinearSolvers/: AMReXGMRES_Wrapper.H  ChebyshevImpl.H  ChebyshevPC.H  ChebyshevSolver_Wrapper.H  CurlCurlMLMGPC.H  ExternLibPC.H  JacobiPC.H  JacobiSolver_Wrapper.H  JacobianFunctionMF.H  LinearFunction.H  LinearFunctionMF.H  LinearSolver.H  LinearSolverLibrary.H  MatrixPC.H  MatrixSolverOps.H  (+14 more)
Source/Utils/: CMakeLists.txt  LowerCornerFunctor.H  LowerCornerFunctor.cpp  Make.package  ParticleUtils.H  ParticleUtils.cpp  SpeciesUtils.H  SpeciesUtils.cpp  SystemMemoryGuard.H  SystemMemoryGuard.cpp  WarpXAlgorithmSelection.H  WarpXDim.H  WarpXDimDispatch.H  WarpXDimIndexing.H  WarpXGetVersion.H  WarpXGetVersion.cpp  WarpXMovingWindow.cpp  WarpXProfilerWrapper.H  WarpXUtil.H  WarpXUtil.cpp  check_interp_points_and_weights.py  check_ipaw_generate_output.sh  cipaw.out  cipaw_dev.out
Source/Utils/Algorithms/: IsIn.H
Source/Utils/Logo/: GetLogo.cpp
Source/Utils/Parser/: BTDIntervalsParser.H  BTDIntervalsParser.cpp  IntervalsParser.H  IntervalsParser.cpp  ParserUtils.H  ParserUtils.cpp
Source/Utils/Tests/: CMakeLists.txt  SystemMemoryGuardTest.cpp  SystemMemoryInfoTest.cpp
Tools/Prototypes/RuntimeDims/: CMakeLists.txt  README.md  Simulation.H  Simulation.cpp  main.cpp
Tools/Prototypes/RuntimeDims/analysis/: analysis_langmuir.py  compare_native.py
Tools/Prototypes/RuntimeDims/perf/: run_perf.sh
Work/: .gitignore
cmake/: WarpXFunctions.cmake
k8s-manifests/: warpx-2d.yaml  warpx-3d.yaml
(+1618 files in other folders)
